--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "express": "^4.21.2",
     "fs-extra": "^11.3.0",
     "multer": "^1.4.5-lts.1",
+    "p-limit": "^6.2.0",
     "uuid": "^11.1.0"
   },
   "name": "ffmpeg-api",
